# debug

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  init.lua  run.bat  run.sh  scrip
doc/lua4/: CMakeLists.txt
include/: luawrapper.h
include/lua/: luaconf.h
lib/: lua.lib
script/: a_start_search.lua  init.lua  ldbmrg.lua  ldebug.lua  ldebug_b.lua  protocol.lua  test.lua  update.lua  utilty.lua
script/debuger/: a_start_search.lua  init.lua  ldbmrg.lua  ldebug.lua  protocol.lua  test  test.lua  update.lua  utilty.lua
src/: debug_dll.cpp  debug_dll.h  debugserver.cpp  debugserver.h
test/: main.cpp
